# lambda_calc

./: Cargo.toml  README.md
examples/: bool.lambda  church-numerals.lambda
src/: env.rs  lexer.rs  main.rs  parser.lalrpop  parser.rs  statement.rs  term.rs  types.rs
src/types/: application.rs  env.rs  lambda.rs  mod.rs  object.rs  symbol.rs  term.rs
