[package]
name = "lambda_calc"
version = "0.1.0"
authors = ["Johan-Mi <johanmi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internment = "0.7.0"
logos = "0.11"
rustyline = { version = "11.0.0", default-features = false }

[profile.release]
lto = true
panic = "abort"
